fixed Header spacing issue

--- a/styles/sass/_header-left.scss
+++ b/styles/sass/_header-left.scss
@@ -15,7 +15,7 @@
 		width:100%;
 	}
 	a {
-		font-size: 20px;
+		font-size: 18px;
 		// padding-left: 1.2rem;
 	}
 
@@ -23,7 +23,7 @@
 
 .logo{
 	position: absolute;
-	top:30px;
+	top:25px;
 	left:0;
 	right:0;
 	text-align: center;
