--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -71,7 +71,7 @@
 
 		h2 {
 			margin-left: 17rem;
-			margin-top: 4rem;
+			margin-top: .5rem;
 			text-transform: uppercase;
 			font-size: 2.5rem;
 			font-weight: 700;
@@ -163,7 +163,7 @@
 	width: 80px;
 	height: 60px;
 	position: absolute;
-	bottom: 30px;
+	bottom: 20px;
 	left: 0;
 	right: 0;
 	margin: auto;
