--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -29,6 +29,7 @@
 	
 		.menu-nav {    
 			margin:-2px auto 0 auto; 
+			margin-left: 18px;
 			height: 100px; 
 			display: flex;
 			padding-left: 0;
