--- a/styles/style.css
+++ b/styles/style.css
@@ -847,12 +847,12 @@ ul {
 }
 
 .header-left a {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .logo {
   position: absolute;
-  top: 30px;
+  top: 25px;
   left: 0;
   right: 0;
   text-align: center;
@@ -927,6 +927,7 @@ ul {
 
 .main-menu .menu .menu-nav {
   margin: -2px auto 0 auto;
+  margin-left: 18px;
   height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1084,7 +1085,7 @@ ul {
 
 .home .banner h2 {
   margin-left: 17rem;
-  margin-top: 4rem;
+  margin-top: .5rem;
   text-transform: uppercase;
   font-size: 2.5rem;
   font-weight: 700;
@@ -1176,7 +1177,7 @@ ul {
   width: 80px;
   height: 60px;
   position: absolute;
-  bottom: 30px;
+  bottom: 20px;
   left: 0;
   right: 0;
   margin: auto;
